@@ -155,7 +155,6 @@
 </table>
 
 <br>
-
 <form action="http://www.google.com/search"
       method="get"
       name="f_lily_google"
@@ -170,6 +169,8 @@
   <input type="hidden" name="q" value=" ">
   <input type="submit" value="Search lilypond.org">
 </form>
+<br>
+<a href="search.html">advanced search</a>.
 
 <p align="right">
   Thanks to <a href="http://www.webdev.nl">webdev.nl</a> for
