@@ -1,0 +1,126 @@
+<!--
+    Translation of CVS $Revision$
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<title>Search LilyPond.org and email archives - noscript</title>
+
+<h1>Search lilypond.org</h1>
+
+<form action="http://www.google.com/search" method="get"
+      name="f">
+  <input name="btnG" type="hidden" value="Google Search">
+  <!-- No wiki currently
+       <input type="text" value="site:lilypond.org -wiki " name="q" size="40">
+       !-->
+  <input type="text" value="site:www.lilypond.org " name="q" size="40">
+  <input type="submit" value="Search">
+</form></nobr>
+
+<h1>Search mailing lists</h1>
+
+<h2>Search lilypond-user</h2>
+
+lilypond-user is about using LilyPond, especially the 2.4 stable series.
+
+<form action="http://www.mail-archive.com/cgi-bin/htsearch" method="get">
+  <input type="hidden" name="method" value="and">
+  <input type="hidden" name="format" value="short">
+  <input type="hidden" name="config" value="lilypond-user_gnu_org">
+  <input type="hidden" name="restrict" value="">
+  <input type="hidden" name="exclude" value="">
+  <input type="text" name="words" value="" size="35">
+  <input type="submit" value="Search">
+</form>
+
+<h2>Search lilypond-devel</h2>
+
+lilypond-user is about LilyPond development, especially the 2.5 unstable series.
+
+
+<form action="http://www.mail-archive.com/cgi-bin/htsearch" method="get">
+  <input type="hidden" name="method" value="and">
+  <input type="hidden" name="format" value="short">
+  <input type="hidden" name="config" value="lilypond-devel_gnu_org">
+  <input type="hidden" name="restrict" value="">
+  <input type="hidden" name="exclude" value="">
+  <input type="text" name="words" value="" size="35">
+  <input TYPE="submit" value="Search">
+</form>
+
+
+<h2>Search bug-lilypond</h2>
+
+bug-lilypond is the bugreport list for LilyPond.
+
+
+<form action="http://www.mail-archive.com/cgi-bin/htsearch" method="get">
+  <input type="hidden" name="method" value="and">
+  <input type="hidden" name="format" value="short">
+  <input type="hidden" name="config" value="bug-lilypond_gnu_org">
+  <input type="hidden" name="restrict" value="">
+  <input type="hidden" name="exclude" value="">
+  <input type="text" name="words" value="" size="35">
+  <input type="submit" value="Search">
+</form>
+
+
+<h2>Search info-lilypond</h2>
+
+info-lilypond is the announcement list for LilyPond.
+
+<form action="http://www.mail-archive.com/cgi-bin/htsearch" method="get">
+  <input type="hidden" name="method" value="and">
+  <input type="hidden" name="format" value="short">
+  <input type="hidden" name="config" value="info-lilypond_gnu_org">
+  <input type="hidden" name="restrict" value="">
+  <input type="hidden" name="exclude" value="">
+  <input type="text" name="words" value="" size="35">
+  <input TYPE="submit" value="Search">
+</form>
+
+<h2>Search all lists using Google</h2>
+
+<form action="http://www.google.com/search" method=get name=f>
+  <!-- input type=hidden name=restrict value=lilypond -->
+  <input name="btnG" type=hidden value="Google Search">
+  <input type="text" value="site:mail.gnu.org +lilypond " name="q" size="40">
+  <input type="submit" value="Search">
+  <!-- input name=btnG type=submit value="Google Search" -->
+  <!-- input name=btnI type=submit value="I'm feeling lucky" -->
+</form>
+
+
+<!-- No wiki currently
+
+
+
+     <h1>Search wiki</h1>
+
+<p>
+  Search wiki titles
+</p>
+
+<p>
+  <form action="http://lilypond.org/wiki/">
+    <input type="text" size="30" name="search" value="">
+    <input type="submit" value="Search">
+  </form>
+</p>
+
+<p>
+  Search wiki pages
+</p>
+<p>
+  <form action="http://lilypond.org/wiki/">
+    <input type="text" size="30" name="full" value="">
+    <input type="submit" value="Search">
+  </form>
+
+</p>
+
+!-->
