@@ -1,5 +1,10 @@
 2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* site/search-noscript.html: 
+	* site/search.html: Resurrect page.
+
+	* site/index.html: Add link.
+
 	* site/old-news.html (href): Fix link.
 
 2005-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>
